# LumOS

./: Cargo.toml  build.rs
.cargo/: config.toml
assets/icons/: Icons.afdesign
kernel/: Cargo.toml
kernel/.cargo/: config.toml
kernel/src/: lib.rs  lumos.rs  main.rs
kernel/src/lumos/: handlers.rs  macros.rs  memory.rs  serial.rs
kernel/src/lumos/buffer/: vga.rs
kernel/src/lumos/handlers/: gdt.rs  interrupts.rs
kernel/tests/: recursion_test.rs  test.rs
src/: main.rs
