[package]
name = "lum-os-kernel"
version = "0.1.0"
edition = "2024"
authors = ["Myin Studios"]

[[bin]]
name = "lum-os-kernel"
test = false
bench = false

[dependencies]
volatile = "0.2.6"
spin = "0.5.2"
x86_64 = "0.14.2"
uart_16550 = "0.2.0"
pic8259 = "0.11.0"
pc-keyboard = "0.8.0"
bootloader_api = "0.11.12"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[package.metadata.bootimage]
test-args = [ "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio", "-display", "none" ]
test-success-exit-code = 33
test-timeout = 300

# TESTS
[[test]]
name = "recursion_test"
harness = false
